Trying solving deploy fixing error

--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -9,6 +9,13 @@ RUN npm install
 
 COPY . .
 
+# Construimos la app React (crea la carpeta build)
+RUN npm run build
+
+# Instalamos 'serve' para servir la app estática
+RUN npm install -g serve
+
 EXPOSE 3001
 
-CMD npm start
+# Usamos serve para lanzar el build estático
+CMD ["serve", "-s", "build", "-l", "3001"]
