--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API=http://localhost:3000
-##REACT_APP_API=https://tu-backend.onrender.com  cuando este desplegado
+REACT_APP_API=https://cucia-service.onrender.com
