--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -17,6 +17,8 @@ COPY package*.json ./
 RUN npm ci
 
 # Copiar e instalar dependencias Python
+COPY src/requirements.txt ./requirements.txt
+
 RUN pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
 
 # Copiar el resto del proyecto
