--- a/devcontainer/Dockerfile
+++ b/devcontainer/Dockerfile
@@ -1,29 +1,21 @@
-# Etapa 1: Build de React
-FROM node:21-bullseye AS builder
+FROM node:21-alpine
 
 WORKDIR /app
 
-# Copiar e instalar dependencias
-COPY package*.json ./
+COPY package.json package-lock.json ./
+
 RUN npm ci
 
-# Copiar el resto del código y compilar
+# Copiar el archivo .env para que las variables estén disponibles durante el build
+COPY .env ./
+
 COPY . .
-RUN npm run build
 
-# Etapa 2: Imagen final para servir archivos estáticos
-FROM node:21-bullseye
+# Fix de permisos y build en un solo paso
+RUN chmod +x ./node_modules/.bin/react-scripts && npm run build
 
-WORKDIR /app
-
-# Instalar solo `serve` para producción
 RUN npm install -g serve
 
-# Copiar build generado
-COPY --from=builder /app/build ./build
-
-# Exponer el puerto usado por `serve`
 EXPOSE 3001
 
-# Comando para servir la app
 CMD ["serve", "-s", "build", "-l", "3001"]
